Fix title wrapping

--- a/source/stylesheets/global.css.sass
+++ b/source/stylesheets/global.css.sass
@@ -79,3 +79,5 @@ h4
     time, .title
       display: block
   +trailer(1)
+  .author
+    white-space: nowrap
